# python-blazarclient

./: .gitignore  .gitreview  .stestr.conf  .zuul.yaml  HACKING.rst  MANIFEST.in  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
blazarclient/: base.py  client.py  command.py  exception.py  i18n.py  shell.py  utils.py  version.py
blazarclient/osc/: plugin.py
blazarclient/tests/: __init__.py  test_base.py  test_client.py  test_command.py  test_plugin.py  test_shell.py
blazarclient/tests/v1/shell_commands/: test_floatingips.py  test_hosts.py  test_leases.py  test_networks.py
blazarclient/v1/: allocations.py  client.py  devices.py  floatingips.py  hosts.py  leases.py  networks.py
blazarclient/v1/shell_commands/: allocations.py  devices.py  floatingips.py  hosts.py  leases.py  networks.py
climateclient/: __init__.py  base.py  client.py  command.py  exception.py  i18n.py  shell.py  utils.py  version.py
climateclient/openstack/common/: excutils.py  fileutils.py  gettextutils.py  jsonutils.py  lockutils.py  log.py  strutils.py
climateclient/openstack/common/fixture/: lockutils.py
climateclient/tests/: __init__.py  test_base.py  test_client.py  test_command.py  test_shell.py
climateclient/v1/: client.py  hosts.py  leases.py
climateclient/v1/shell_commands/: hosts.py  leases.py
doc/: requirements.txt
releasenotes/notes/: bug-1777548-6b5c770abc6ac360.yaml  bug-1783296-set-start-date-to-now-e329a6923c11432f.yaml  bug-1784038-fix-lease-create-without-start-date-73ce2bb28bc883f7.yaml  bug-1786030-fix-error-message-with-same-name-leases-561ece8e602b4c68.yaml  default-affinity-value-150947560fd7da3c.yaml  flavor-based-instance-reservation-ec9730ddfeabdf15.yaml  floatingip-reservation-update-5823a21516135f17.yaml  floatingip-support-d184a565f324d31b.yaml  host-allocation-fad8e511cb13c0e8.yaml  host-resource-property-9ac5c21bd3ca6699.yaml  ksa-loading-9731c570772c826a.yaml  openstackclient-support-f591eef2dc3c1a8b.yaml  parse-required-floatingips-f79f79d652e371ae.yaml  respect-selected-region-a409773f851ccb47.yaml  separate-id-parser-argument-from-showcommand-ce92d0c52dd1963e.yaml
releasenotes/source/: conf.py  index.rst
