[metadata]
name = python-blazarclient
summary = Client for OpenStack Reservation Service
description_file = README.rst
license = Apache Software License
python_requires = >=3.6
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: OpenStack
    Development Status :: 3 - Alpha
    Framework :: Setuptools Plugin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://launchpad.net/blazar

[files]
packages =
    blazarclient

[entry_points]
console_scripts =
    blazar = blazarclient.shell:main

openstack.cli.extension =
    reservation = blazarclient.osc.plugin

openstack.reservation.v1 =
    reservation_device_allocation_show = blazarclient.v1.shell_commands.devices:ShowDeviceAllocation
    reservation_device_allocation_list = blazarclient.v1.shell_commands.devices:ListDeviceAllocations
    reservation_device_capability_show = blazarclient.v1.shell_commands.devices:ShowDeviceCapability
    reservation_device_capability_list = blazarclient.v1.shell_commands.devices:ListDeviceCapabilities
    reservation_device_capability_update = blazarclient.v1.shell_commands.devices:UpdateDeviceCapability
    reservation_device_create = blazarclient.v1.shell_commands.devices:CreateDevice
    reservation_device_delete = blazarclient.v1.shell_commands.devices:DeleteDevice
    reservation_device_list = blazarclient.v1.shell_commands.devices:ListDevices
    reservation_device_reallocate = blazarclient.v1.shell_commands.devices:ReallocateDevice
    reservation_device_set = blazarclient.v1.shell_commands.devices:UpdateDevice
    reservation_device_unset = blazarclient.v1.shell_commands.devices:UnsetAttributeDevice
    reservation_device_show = blazarclient.v1.shell_commands.devices:ShowDevice
    reservation_floatingip_create = blazarclient.v1.shell_commands.floatingips:CreateFloatingIP
    reservation_floatingip_delete = blazarclient.v1.shell_commands.floatingips:DeleteFloatingIP
    reservation_floatingip_list = blazarclient.v1.shell_commands.floatingips:ListFloatingIPs
    reservation_floatingip_show = blazarclient.v1.shell_commands.floatingips:ShowFloatingIP
    reservation_host_allocation_list = blazarclient.v1.shell_commands.hosts:ListHostAllocations
    reservation_host_allocation_show = blazarclient.v1.shell_commands.hosts:ShowHostAllocation
    reservation_host_capability_list = blazarclient.v1.shell_commands.hosts:ListHostCapabilities
    reservation_host_capability_show = blazarclient.v1.shell_commands.hosts:ShowHostCapability
    reservation_host_capability_update = blazarclient.v1.shell_commands.hosts:UpdateHostCapability
    reservation_host_create = blazarclient.v1.shell_commands.hosts:CreateHost
    reservation_host_delete = blazarclient.v1.shell_commands.hosts:DeleteHost
    reservation_host_list = blazarclient.v1.shell_commands.hosts:ListHosts
    reservation_host_reallocate = blazarclient.v1.shell_commands.hosts:ReallocateHost
    reservation_host_set = blazarclient.v1.shell_commands.hosts:UpdateHost
    reservation_host-unset = blazarclient.v1.shell_commands.hosts:UnsetAttributeHost
    reservation_host_show = blazarclient.v1.shell_commands.hosts:ShowHost
    reservation_lease_create = blazarclient.v1.shell_commands.leases:CreateLeaseBase
    reservation_lease_delete = blazarclient.v1.shell_commands.leases:DeleteLease
    reservation_lease_list = blazarclient.v1.shell_commands.leases:ListLeases
    reservation_lease_set = blazarclient.v1.shell_commands.leases:UpdateLease
    reservation_lease_show = blazarclient.v1.shell_commands.leases:ShowLease
    reservation_network_allocation_show = blazarclient.v1.shell_commands.networks:ShowNetworkAllocation
    reservation_network_allocation_list = blazarclient.v1.shell_commands.networks:ListNetworkAllocations
    reservation_network_capability_show = blazarclient.v1.shell_commands.networks:ShowNetworkCapability
    reservation_network_capability_list = blazarclient.v1.shell_commands.networks:ListNetworkCapabilities
    reservation_network_capability_update = blazarclient.v1.shell_commands.networks:UpdateNetworkCapability
    reservation_network_create = blazarclient.v1.shell_commands.networks:CreateNetwork
    reservation_network_delete = blazarclient.v1.shell_commands.networks:DeleteNetwork
    reservation_network_list = blazarclient.v1.shell_commands.networks:ListNetworks
    reservation_network_set = blazarclient.v1.shell_commands.networks:UpdateNetwork
    reservation_network_unset = blazarclient.v1.shell_commands.networks:UnsetAttributeNetwork
    reservation_network_show = blazarclient.v1.shell_commands.networks:ShowNetwork

